# cellDB

./: Cargo.toml  LICENSE  README.md  dfx.json
canisters/cell_manager/: Cargo.toml  cell_manager.did
canisters/cell_manager/src/: lib.rs  state.rs  types.rs
canisters/data_cell/: Cargo.toml  data_cell.did
canisters/data_cell/src/: access_control.rs  lib.rs  schema.rs  storage.rs  validation.rs
canisters/query_aggregator/: Cargo.toml  query_aggregator.did
canisters/query_aggregator/src/: coordination.rs  lib.rs  optimization.rs  streaming.rs
